Add an option to allow unsafe memory access by default in recent JDKs into BootloaderOsAbstraction ()
Before this PR, recent JDKs' unsafe memory access is not `allow`ed, and
that caused problems to some of our components. For now, we will add
that setting unless another mode is specified to allow a smooth
transition into JDK 25.